3. Crear un controlador CRUD

--- a/app/src/app/feed/default/default.component.html
+++ b/app/src/app/feed/default/default.component.html
@@ -1,16 +1,50 @@
-<mat-card class="feed">
-    <mat-card-header>
-        <mat-card-title>{{title}}</mat-card-title>
-    </mat-card-header>
-    <div class="feed-img-pos">
-        <img [src]="image" class="feed-img" alt="Default imgs">
+<mat-card class="feed" *ngIf="!loading">
+    <div *ngIf="!editMode">
+        <mat-card-header>
+            <mat-card-title>{{config.title}}</mat-card-title>
+        </mat-card-header>
+        <div class="feed-img-pos" *ngIf="config?.image">
+            <img [src]="config.image" class="feed-img" alt="Default imgs">
+        </div>
+        <mat-card-content>
+            <p>{{config.body}}</p>
+            <p>{{config.source}}</p>
+            <p>{{config.publisher}}</p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-raised-button (click)="clickEdit()" color="accent">Edit</button>
+            <button mat-raised-button (click)="clickDelete()" color="warn">Delete</button>
+        </mat-card-actions>
     </div>
-    <mat-card-content>
-        <p>{{body | truncate: 5}}</p>
-        <p>{{source}}</p>
-        <p>{{publisher}}</p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button (click)="clickDetails()" color="accent">Read more</button>
-    </mat-card-actions>
+    <div *ngIf="editMode">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
+            <mat-form-field class="w-100">
+                <input matInput [formControl]="form.controls.title" placeholder="Title" required>
+            </mat-form-field>
+            <mat-form-field class="w-100">
+                <input matInput [formControl]="form.controls.body" placeholder="Body" required>
+            </mat-form-field>
+
+            <mat-form-field class="w-100">
+                <input matInput [formControl]="form.controls.source" placeholder="Source">
+            </mat-form-field>
+
+            <mat-form-field class="w-100">
+                <input matInput [formControl]="form.controls.publisher" placeholder="Publisher">
+            </mat-form-field>
+
+            <mat-form-field class="w-100">
+                <input matInput [formControl]="form.controls.source" placeholder="Source">
+            </mat-form-field>
+
+            <mat-form-field class="w-100">
+                <input matInput [formControl]="form.controls.image" placeholder="Image">
+            </mat-form-field>
+        </form>
+        <button mat-raised-button (click)="clickCancel()">Cancel</button>
+        <button mat-raised-button (click)="onSubmit()" color="primary" [disabled]="!form.valid">Submit</button>
+    </div>
 </mat-card>
+<ng-container *ngIf="loading">
+    <mat-spinner></mat-spinner>
+</ng-container>
